# aw-watcher-screenshot

./: .gitignore  README.md  pyproject.toml
aw_watcher_screenshot/: __main__.py  config.py  main.py
