[tool.poetry]
name = "aw-watcher-screenshot"
version = "0.1.0"
description = ""
authors = ["tiagovla <tiagovla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aw-client = "^0.5.14"
mss = "^10.0.0"
aw-watcher-window = {git = "https://github.com/ActivityWatch/aw-watcher-window.git", rev = "c80aa5a"}

[tool.poetry.scripts]
aw-watcher-screenshot = "aw_watcher_screenshot.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
